--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         --custom-bg-gradient: linear-gradient(334.25deg, #d7f1ff -8.18%, #f2f8ff 65.15%);
         --custom-font-family: 'Poppins', sans-serif;
       }
+      /* html,
+      body {
+        height: 100vh !important;
+        margin: 0;
+      } */
 
       .bg-custom {
         background: var(--custom-bg-gradient);
